# jetsonRos

./: env.sh
src/kaimi_mid_camera/: CMakeLists.txt  package.xml
src/kaimi_mid_camera/include/: FindObject.h
src/kaimi_mid_camera/launch/: kaimi_mid_camera.launch  kaimi_mid_camera.launch.xml
src/kaimi_mid_camera/src/: FindObject.cpp  kaimi_mid_camera_node.cpp
src/kaimi_near_camera/: CMakeLists.txt  package.xml
src/kaimi_near_camera/cfg/: kaimi_near_camera.cfg
src/kaimi_near_camera/cfg/cpp/kaimi_near_camera/: kaimi_near_camera_paramsConfig.h
src/kaimi_near_camera/docs/: kaimi_near_camera_paramsConfig-usage.dox  kaimi_near_camera_paramsConfig.dox  kaimi_near_camera_paramsConfig.wikidoc
src/kaimi_near_camera/include/: FindObject.h
src/kaimi_near_camera/launch/: kaimi_near_camera.launch
src/kaimi_near_camera/src/: FindObject.cpp  kaimi_near_camera_node.cpp
src/kaimi_near_camera/src/kaimi_near_camera/cfg/: kaimi_near_camera_paramsConfig.py
src/kinect_find_object/: CMakeLists.txt  package.xml
src/kinect_find_object/.AppleDouble/: .Parent  CMakeLists.txt  package.xml
src/kinect_find_object/include/.AppleDouble/: .Parent
src/kinect_find_object/include/kinect_find_object/.AppleDouble/: .Parent
src/kinect_find_object/launch/: kinect_find_object.launch
src/kinect_find_object/launch/.AppleDouble/: .Parent  kinect_find_object.launch
src/kinect_find_object/src/: kinect_find_object_node.cpp
src/kinect_find_object/src/.AppleDouble/: .Parent  kinect_find_object_node.cpp
